# aegis

./: .gitignore  Cargo.toml
.github/workflows/: codeql.yml  rust-clippy.yml
crates/aegis-core/: Cargo.toml
crates/aegis-core/src/: backend.rs  error.rs  lib.rs
crates/aegis-core/tests/: backend_trait.rs
crates/aegis-detection/: Cargo.toml
crates/aegis-detection/src/: decoder.rs  engine.rs  flow_table.rs  lib.rs  model.rs
crates/aegis-detection/src/detectors/: dpi.rs  geo_block.rs  ip_reputation.rs  mod.rs  port_scan.rs  protocol_anomaly.rs  rate_limiter.rs  syn_flood.rs
crates/aegis-detection/tests/: decoder_test.rs  detectors_test.rs  engine_test.rs  flow_table_test.rs  model_test.rs
crates/aegis-rules/: Cargo.toml
crates/aegis-rules/src/: compiler.rs  engine.rs  error.rs  lib.rs  model.rs  parser.rs  watcher.rs
crates/aegis-rules/tests/: compiler_test.rs  engine_test.rs  model_test.rs  parser_test.rs  watcher_test.rs
crates/aegis-store/: Cargo.toml
crates/aegis-store/migrations/: 001_initial.sql
crates/aegis-store/src/: audit.rs  db.rs  error.rs  events.rs  ip_stats.rs  lib.rs  migrations.rs  model.rs  ring.rs
crates/aegis-store/tests/: audit_test.rs  db_test.rs  events_test.rs  ip_stats_test.rs  model_test.rs
docs/superpowers/plans/: 2026-03-15-plan-1-foundation.md  2026-03-16-plan-2-detection.md
docs/superpowers/specs/: 2026-03-15-aegis-core-design.md
