[workspace]
resolver = "2"
members = [
    "crates/aegis-core",
    "crates/aegis-rules",
    "crates/aegis-store",
    "crates/aegis-detection",
]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Networking / IP types
ipnet = { version = "2", features = ["serde"] }

# Packet processing
etherparse = "0.15"
bytes = "1"
rayon = "1"
aho-corasick = "1"
maxminddb = "0.23"

# Storage
rusqlite = { version = "0.31", features = ["bundled", "modern_sqlite"] }
# NOTE: On Linux/WSL production builds, change "bundled" to "bundled-sqlcipher"
# SQLCipher (AES-256 DB encryption) requires system OpenSSL (not available on
# Windows dev without extra setup). The wrong_key_fails_to_open test is #[ignore]
# on non-SQLCipher builds; all other storage tests pass on both platforms.
rusqlite_migration = "1"
crossbeam-queue = "0.3"
dashmap = "6"
moka = { version = "0.12", features = ["sync"] }

# Crypto
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"

# File watching
notify = "6"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.dev]
opt-level = 0
debug = true
