[package]
name = "aegis-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ipnet = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
