[package]
name = "aegis-detection"
version = "0.1.0"
edition = "2021"

[dependencies]
aegis-rules = { path = "../aegis-rules" }
aegis-store = { path = "../aegis-store" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
bytes = { workspace = true }
rayon = { workspace = true }
dashmap = { workspace = true }
moka = { workspace = true }
etherparse = { workspace = true }
aho-corasick = { workspace = true }
maxminddb = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
