[package]
name = "aegis-rules"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aegis-core = { path = "../aegis-core" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
ipnet = { workspace = true }
notify = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
