[package]
name = "aegis-store"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
crossbeam-queue = { workspace = true }
dashmap = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
